Done translation for few files with fixes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107448 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/main.lang
+++ b/ms/main.lang
@@ -7,7 +7,7 @@ Kawasan Media
 
 
 ;About
-Tentang
+Tentang Kami
 
 
 ;Store
@@ -31,7 +31,7 @@ Add-ons {ok}
 
 
 ;About Us
-Mengenai kami
+Tentang kami
 
 
 ;Developers
