--- a/ms/snippets.lang
+++ b/ms/snippets.lang
@@ -1,122 +1,92 @@
 # these text snippets are mostly used on about:home
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-
+Bawa Firefox ke mana sahaja anda pergi! Firefox untuk Android yang terkini telah sedia untuk dinikmati olehmu. <a href="%s"> Dapatkannya sekarang</a>.
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-
+Memandangkan anda telah memiliki versi yang terkini, <a href="%s">belajarlah tentang perkara menarik</a> yang dapat dilakukan dengan Firefox anda.
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-
+Anda tidak berada di versi Firefox yang terkini. <a href="%s">Pertingkatkan hari ini</a> untuk mendapatkan yang terbaik dari Web!
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Get the latest Firefox features first in <a href="%s">Aurora</a>.
-
+Dapatkan ciri-ciri terbaru dalam Firefox yang terlebih dahulu <a href="%s">Aurora</a>.
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-
+Dapatkan pratonton tidak rasmi akan Firefox pada masa hadapan.<a href="%s">Muat turun Firefox Aurora</a> dan uji ciri-ciri terbarunya.
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-
+Sebelum Firefox terdapat Beta, dan sebelum Beta terdapat Aurora. <a href="%s">Cubalah Firefox Aurora</a> dan sekarang untuk ciri-ciri yang tercanggih
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-
+;<a href="%s">Jadilah seorang Firefox Affiliate</a> dan dapatkan segalanya yang anda perlu untuk berkongsi Firefox dengan dunia!
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-
+Firefox dengan bangganya adalah tidak berasaskan keuntungan dan bebas untuk berinovasi bagi pihak anda tanpa kompromi. <a href="%s">Maklumat lanjut</a> mengenai misi kami.
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-
+Pantas, fleksible dan selamat. Firefox adalah satu-satunya pelayar web yang mengutamakan anda. <a href="%s">Maklumat lanjut</a> tentang kelainan kami dari segi rekaan.
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-
+<a href="%s">Muat turun Firefox pada tablet Android anda</a> dan letakkan kuasa Web ditangan anda. Dapatkan ia sekarang.
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-
+Pastikan plugin anda adalah terkini dan kekal selamat dalam talian dengan <a href="%s">Semak Plugin</a>.
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-
+Firefox anda sentiasa bergaya. Menawan dengan <a href="%s">Personas</a> yang tebaru.
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-
+Terlalu banyak tab?  Menebus guna pelayar Web anda daripada  bersepah dengan <a href="%s">Panorama</a>.
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-
+Tiada dua pengguna Firefox yang serupa. <a href="%s">Tambah mana-mana butang ke pelayar anda</a> atau buang mana-mana yang tidak digunakan. Klik kanan di asal dan pilih Ubahsuai.
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-
+Gaya Firefox anda menawan dengan Personas. "Roll over" dengan mencuba, klik untuk gunakan ia. Atau layari <a href="%s">galeri </a> untuk lebih banyak lagi
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-
+Lakukan tinjauan pertama ke atas ciri-ciri terbaru, bahkan sebelum ia jadi ke Beta. <a href="%s">Muat turun Firefox Aurora.</a>
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-
+<a href="%s">Muat turun Firefox Aurora</a> untuk menguji ciri dan bantu kami untuk menentukannya ke Beta.
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-
+Sertai dan bantu kami membentuk masa depan Firefox. <a href="%s">Muat turun Firefox Aurora.</a>
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-
+Firefox untuk Android kini dioptimumkan untuk dilayari pada tablet. <a href="%s">Dapatkan kuasa Web di hujung jarimu</a>.
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-
+Muat turun Firefox untuk tablet Android anda dan letakkan kuasa Web di tanganmu. <a href="%s">Dapatkannya sekarang,</a>.
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-
+<a href="%">Muat turun Firefox Beta</a>, berikan maklum balas dan bantu kami menjadikan Firefox yang akan datang lebih hebat untuk  450 juta pengguna kami.
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-
+Cuba ciri-ciri, perhalusi dan gilap ia dan bantu kami untuk menjadikan versi seterusnya lebih baik daripada sebelum. <a href="%">Muat Turun Firefox Beta hari ini!</a>
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-
+Cintakan Firefox? Ingin membantu untuk menjadikan versi yang seterusnya lebih baik? <a href="%">Muat turun Firefox Beta</a> dan berikan maklum balas hari ini!
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-
+Adakah anda sedang menggunakan Firefox Beta yang terkini? <a href="%">Dapatkannya sekarang</a> dan bantu kami menguji ciri- cirinya yang terbaru.
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-
+Tidak berada di Firefox Beta yang terkini? <a href="%">Dapatkannya hari ini</a> untuk cakna dengan apa yang kami lakukan untuk versi akan datang.
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-
+Ingin berkongsi maklum balas anda? <a href="%">Inilah caranya</a> dan bantulah dalam menjadikan versi Firefox akan datang lebih dari sekadar hebat.
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-
+Pengguna Firefox Beta: Jangan lupa untuk <a href="%">berikan maklum balas</a>  untuk membantu kami meletakan penambahbaikan terakhir pada versi kami seterusnya.
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-
+Berikan bantuan anda untuk menjadikan Firefox lebih dari sekadar hebat. <a href="%">Jadilah seorang Affiliate</a> dan kongsi Firefox Beta dengan rakan-rakan anda.
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
-
+Undang rakan untuk pratonton ciri-ciri Firefox yang akan datang. <a href="%">Jadilah seorang Affiliate</a> dan kongsi Firefox Aurora hari ini.
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+{l10n-extra}Hadiah lumayan! Juri Hollywood! Tanda seru! <a href="%">Sertai Firefox Flicks</a>, sebuah pertandingan video global untuk bercerita, atau undi kegemaran anda!
 
