Done translation for few files with fixes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107449 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/newsletter.lang
+++ b/ms/newsletter.lang
@@ -67,7 +67,7 @@ Berita kami
 Dapatkan tip-tip dan trik yang terbaru duntuk mendapatkan yang terbak daripada pelayar kegemaran anda.
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
 Belajar mengenai ciri-ciri terbaru dan add-ons  yang terhangat Firefox mobile.
