--- a/zh-TW/main.lang
+++ b/zh-TW/main.lang
@@ -408,11 +408,10 @@ Mozilla Firefox，讓您可以在 XP 當中體驗最新網頁技術。
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
-
+新鮮事
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+隱私權
 
 
