Fulah: revise some text
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107465 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/channelsposter.lang
+++ b/ff/channelsposter.lang
@@ -51,7 +51,7 @@ Ko fartaŋŋe moolanaaɗo mo alaa joom mum so wonaa aan!
 
 
 ;Web/platform developers, early adopters and adventure seekers
-Topotooɓe geese/yuɓɓoo, huutorɓe adanɓe e suuɓe coono
+Topayɓe geese/yuɓɓoo, huutorɓe adanɓe e suuɓe coono
 
 
 ;Access to experimental new features - your feedback helps determine what makes it to Beta
@@ -63,7 +63,7 @@ Huutoro fannuuji ƴeewndorɗi kesi - duttine maa mballat-min suɓaade ko naatnet
 
 
 ;Platform developers and Mozilla contributors
-Topotooɓe juɓɓe e wallitooɓe Mozilla
+Topayɓe juɓɓe e wallitooɓe Mozilla
 
 
 ;Access to cutting edge features still under active development
