--- a/ff/main.lang
+++ b/ff/main.lang
@@ -35,7 +35,7 @@ Baɗte amen
 
 
 ;Developers
-Topotooɓe
+Topayɓe
 
 
 ;Labs
@@ -403,16 +403,12 @@ Hesɗitin jooni
 
 
 ;Supported Devices
-Kaɓirɗi tammbitaaɗi
+Supported Devices
 
 
-# This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
 What’s New
 
 
-# This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 Privacy
-
-
