--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -130,18 +130,18 @@ Firefox o l'à de nêuve caraterìstiche pe fâte fâ e pròscime operaçioìn c
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Te inamoòu do Firefox Beta? <a href="%s">Invîta i teu amîxi</a> a dâ 'n'eugiâ a cöse ghe saiâ into pròscimo Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Mi adêvio o Firefox Beta dâ 'n'eugiâ a cöse a-e ùrtime caraterìstiche inovaçioìn do pròscimo Firefox. <a href="%s">Vànni a védde</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Gràçie de adêuviâ Firefox Beta pe agiutâ a fâ Firefox ancón ciù béllo. Òua <a href="%s">invîta i teu amîxi</a> a provâlo.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Mi adêuvio o Firefox Beta pe agiutâ a verificâ e ùrtime caraterìstiche e fâ Firefox ancón ciù béllo. <a href="%s">Prêuvalo</a>.
 
 
