--- a/lij/whatsnew.lang
+++ b/lij/whatsnew.lang
@@ -62,38 +62,38 @@ O Android Robot o l'é stæto riprodûto da 'n travàggio creòu e <a href="%s">
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Pìggia Firefox pe Android</a> e ti aviæ a poténsa do Web inte teu màn. O l'é velôce, fùrbo e segûo!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Òua pìggia o navegatô pe-o telefonìn che ti pòrti derê
 
 
 ;Firefox Features
-Firefox Features
+Caraterìstiche do Firefox 
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Benvegnûo into Firefox
 
 
 ;Firefox Help
-Firefox Help
+Agiùtto de Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Dezégno de Firefox pe Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Velôce. Fùrbo. Segûo.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Pìggia o navegatô pe-o telefonìn che ti pòrti derê.
 
 
