Fulah: translate new strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107469 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/mobile.lang
+++ b/ff/mobile.lang
@@ -1,3 +1,4 @@
+# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 ;Get Firefox for Android
 Heɓ Firefox mo Android
 
@@ -124,3 +125,8 @@ Aawto ngam ƴeewndaade mahngo ngo labana-ɗaa.
 
 ;See all our channels for mobile »
 Yillo cali cinndel goɗɗi ɗii fof »
+
+
+# Google Play is the new name of the Android Market
+;Free from the Google Play Store
+Alla meho e jeere Googole Play Store
