--- a/ff/main.lang
+++ b/ff/main.lang
@@ -403,12 +403,14 @@ Hesɗitin jooni
 
 
 ;Supported Devices
-Supported Devices
+Kaɓirɗi Tambitaaɗi
 
 
+# This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Ko Hesɗi e Firefox
 
 
+# This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Suturo
