--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -1,6 +1,4 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
 Haayoo! Firefox maa hesɗitii.
 
@@ -62,38 +60,36 @@ Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondir
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, e,a yuɓɓi, ena hisi!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Jooni heɓ wanngorde cinndel wona nafoore maa
 
 
 ;Firefox Features
-Firefox Features
+Fannuuji Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+A jaɓɓaama e Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ballal Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Natal Firefox mo Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Jaawɗum. Juɓɓuɗum. Kisɗum.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+Heɓ wanngorde cinndel wona nafoore maa.
