Fulah: Add translator comments back
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107470 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/home.lang
+++ b/ff/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Heertin
 
@@ -26,6 +27,7 @@ Amin ndeeni kisal maa.
 Heɓ Firefox e cinndel maa!
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Waɗiraa ko gostondiral.
 
@@ -42,6 +44,7 @@ Heertin <br/> ngam ɓeydude <br/> ɗum yaawde
 Heɓ ɓeyditte <br/> ngam ɓeydude <br/> ɗum weeɓde
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Maa gollane kisa <br /> tawa a tampaani.
 
@@ -58,6 +61,7 @@ Naatde e <br/> tabbe weeɓtii
 Ɓeyditte <br/> ittinal
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Waɗiraa ko <br/> yo a fijir.
 
@@ -70,6 +74,7 @@ Jaytinooje <br/> 3D
 Ɓuri kadi <br/> hoolnaade
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Keertingol <br/> alaa tampere
 
@@ -78,6 +83,7 @@ Keertingol <br/> alaa tampere
 Kisal <br/> ceeɓtorngal
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Jaytinooje <br/> ceeɓtorɗe
 
