--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -90,7 +90,7 @@ Prêuva, rifìniscile e polìscile e agiùttine a fâ a mêgio versción de sén
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-T'ê inamoòu de Firefox? Ti ne veu agiutâ a realizâ a pròscima versción ancón ciù bèlla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
+Ti veu bén a Firefox? Ti ne veu agiutâ a realizâ a pròscima versción ancón ciù bèlla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
@@ -130,7 +130,7 @@ Firefox o l'à de nêuve caraterìstiche pe fâte fâ e pròscime operaçioìn c
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Te inamoòu do Firefox Beta? <a href="%s">Invîta i teu amîxi</a> a dâ 'n'eugiâ a cöse ghe saiâ into pròscimo Firefox.
+Ti veu bén a Firefox Beta? <a href="%s">Invîta i teu amîxi</a> a dâ 'n'eugiâ a cöse ghe saiâ into pròscimo Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
