updated main.lang for Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107478 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/main.lang
+++ b/rm/main.lang
@@ -408,11 +408,12 @@ Apparats sustegnids
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Novaziuns
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Sfera privata
+
 
 
