--- a/rm/whatsnew.lang
+++ b/rm/whatsnew.lang
@@ -62,38 +62,38 @@ Il roboter dad Android è vegnì reproducì or da material creà e <a href="%s">
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Telechargia Firefox per Android</a> e tegna la forza dal web en tes mauns. El è spert, scort e segir!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Va ussa per il navigatur mobil che protegia tai
 
 
 ;Firefox Features
-Firefox Features
+Funcziuns da Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Bainvegni tar Firefox
 
 
 ;Firefox Help
-Firefox Help
+Agid da Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Art cun Firefox per Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Spert. Scort. Segir.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Retschaiver il navigatur mobil che protegia tai.
 
 
