--- a/cs/mobile.lang
+++ b/cs/mobile.lang
@@ -131,6 +131,6 @@ Zobrazit všechny verze pro mobily »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Získat zdarma z Google Play
 
 
