--- a/cs/whatsnew.lang
+++ b/cs/whatsnew.lang
@@ -62,38 +62,38 @@ Robot Androida byl překreslen z díla vytvořené a <a href="%s">nasdílené sp
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Získejte Firefox pro Android</a> a mějte sílu webu ve svých rukou. Je rychlý, chytrý a bezpečný!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Získejte webový prohlížeč pro mobily, který vás dostane
 
 
 ;Firefox Features
-Firefox Features
+Vlastnosti Firefoxu
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Vítá vás Firefox
 
 
 ;Firefox Help
-Firefox Help
+Nápověda k Firefoxu
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Obrázek Firefox pro Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rychlý. Chytrý. Bezpečný.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Získejte webový prohlížeč pro mobily, který vás dostane
 
 
