--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -130,18 +130,19 @@ Rápido, rápido, rápido. <a %s>Firefox para Android acaba de tener una gran ac
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+¿Te encanta Firefox Beta? <a href="%s">Invitá a tus amigos</a> a que vean qué es lo próximo que llegará a Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Uso Firefox Beta para conocer las últimas funcionalidades e innovaciones que llegarán a Firefox. <a href="%s">Miralo</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Gracias por usar Firefox Beta para ayudarnos a que Firefox sea aún más increíble.
+<a href="%s">Invitá a tus amigos</a> a probarlo.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Yo uso Firefox Beta para ayudar a probar las últimas funcionalidades y hacer que Firefox sea más increíble. <a href="%s">Probalo</a>.
 
 
