--- a/es-AR/main.lang
+++ b/es-AR/main.lang
@@ -408,11 +408,11 @@ Dispositivos disponibles
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Lo nuevo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacidad
 
 
