--- a/es-AR/mobile.lang
+++ b/es-AR/mobile.lang
@@ -131,6 +131,6 @@ Mirá todos nuestros canales para disp. móviles »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Gratis desde Google Play
 
 
