--- a/es-AR/whatsnew.lang
+++ b/es-AR/whatsnew.lang
@@ -62,38 +62,38 @@ El Android Robot se reproduce del trabajo creado y <a href="%s">compartido por G
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Descargá Firefox para Android</a> y poné el poder de la Web en tus manos. ¡Es rápido, inteligente y seguro!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Descargá ahora el navegador móvil que cuida tu espalda
 
 
 ;Firefox Features
-Firefox Features
+Características de Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Bienvenido a Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ayuda de Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Arte de Firefox para Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rápido. Inteligente. Seguro
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Descargá ahora el navegador móvil que cuida tu espalda
 
 
