Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107512 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/mobile.lang
+++ b/hu/mobile.lang
@@ -131,6 +131,6 @@ Töltse le és próbálja ki a legmegfelelőbb verziót.
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Ingyenes a Google Play Store-ban
 
 
