--- a/hu/main.lang
+++ b/hu/main.lang
@@ -408,11 +408,11 @@ Támogatott eszközök
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Újdonságok
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Adatvédelem
 
 
