--- a/hu/whatsnew.lang
+++ b/hu/whatsnew.lang
@@ -62,38 +62,37 @@ Az Android Robot Google által készített és <a href="%s">megosztott</a> munka
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Töltse le a Firefox for Androidot</a> és vegye kezébe az internet erejét. Gyors, okos és biztonságos!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Töltse le a mobil böngészőt, ami védelmet ad
 
 
 ;Firefox Features
-Firefox Features
+Firefox-funkciók
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Üdvözli a Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox Súgó
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox for Android arculat
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Gyors. Okos. Biztonságos.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
+Töltse le a mobil böngészőt, ami védelmet ad.
 
