updated .lang files for Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107513 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/newsletter.lang
+++ b/rm/newsletter.lang
@@ -182,14 +182,14 @@ Newsletters da Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Grazia! Guarda en la posta entrada per confermar tes abunament.
+Grazia! Dà in tgit en la posta entrada per confermar tes abunament.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-Ti vegns a retschaiver in e-mail da mozilla@e.mozilla.org per confermar tes abunament. Sche ni na al retschaivas betg, dà in sguard en l'ordinatur dad e-mails nungiavischads. Ti stos confermar che ti has abunà noss newsletter.
+Ti retschaivas in e-mail da mozilla@e.mozilla.org per confermar tes abunament. Sche ti n'al retschaivas betg, dà in sguard en l'ordinatur dad e-mails nungiavischads. Ti stos confermar che ti hajas abunà noss newsletter.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Cun agiuntar l'adressa mozilla@e.mozilla.org a tes cudeschet d'adressas pos ti procurar che l'e-mail arriva era propi tar tai.
+Cun agiuntar l'adressa mozilla@e.mozilla.org a tes cudeschet d'adressas garanteschas ti che l'e-mail arriva era propi tar tai.
 
 
