--- a/rm/snippets.lang
+++ b/rm/snippets.lang
@@ -126,22 +126,22 @@ Spert, spert, spert. <a %s>Firefox per Android ha gist retschavì ina gronda act
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox ha novas funcziuns che ta laschan lavurar anc pli spert! <a href="%">Guarda il video per retschaiver ulteriuras infurmaziuns.</a>
+Firefox ha novas funcziuns che ta laschan lavurar anc pli spert! <a href="%">Guarda il video per ulteriuras infurmaziuns.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Charezzas ti Firefox Beta? <a href="%s">Envida tes amis</a> da dar in sguard sin quai ch'als spetga prest.
+Ta plascha Firefox Beta? <a href="%s">Envida tes amis</a> per dar in sguard sin quai ch'als spetga prest.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-Jau utilisesch Firefox Beta per dar in sguard sin las novas funcziuns ed innovaziuns che vegnan prest integradas en Firefox. <a href="%s">Las emprova</a>.
+Jau dovr Firefox Beta per dar in sguard sin las novas funcziuns ed innovaziuns che vegnan prest integradas en Firefox. <a href="%s">Las emprova</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Grazia che ti utiliseschas Firefox Beta per gidar da far anc pli grondius Firefox. <a href="%s">Envida ussa tes amis</a> ed als lascha era empruvar.
+Grazia che ti utiliseschas Firefox Beta per gidar a crear in Firefox anc pli grondius. <a href="%s">Envida ussa tes amis</a> ed als lascha era empruvar.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-Jau utilisesch Firefox Beta per gidar da testar las pli novas funcziuns da Firefox e per gidar da far el anc pli schenials. <a href="%s">Emprova era ti</a>!
+Jau dovr Firefox Beta per gidar a testar las pli novas funcziuns da Firefox e per gidar al render anc pli schenial. <a href="%s">Emprova era ti</a>!
 
 
