--- a/rm/whatsnew.lang
+++ b/rm/whatsnew.lang
@@ -62,7 +62,7 @@ Il roboter dad Android è vegnì reproducì or da material creà e <a href="%s">
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Telechargia Firefox per Android</a> e tegna la forza dal web en tes mauns. El è spert, scort e segir!
+<a href="%s">Telechargia Firefox per Android</a> ed emprenda d'enconuscher la forza dal web. El è spert, scort e segir!
 
 
 ;Now get the mobile browser that’s got your back
@@ -94,6 +94,6 @@ Spert. Scort. Segir.
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Retschaiver il navigatur mobil che protegia tai.
+Va per il navigatur mobil che protegia tai.
 
 
