--- a/cy/main.lang
+++ b/cy/main.lang
@@ -403,16 +403,16 @@ Diweddarwch yn awr
 
 
 ;Supported Devices
-Dyfeisiau cymeradwy
+Dyfeisiau Cymeradwy
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Be sy'n Newydd
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Preifatrwydd
 
 
