--- a/cy/whatsnew.lang
+++ b/cy/whatsnew.lang
@@ -62,38 +62,37 @@ Mae'r Robot Android wedi ei atgynhyrchu o waith a grëwyd ac a <a href="%s">rhan
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Estyn Firefox ar gyfer Android</a> a rhoi grym y We yn eich dwylo. Mae'n gyflym, smart a diogel!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Estyn y porwr symudol sy'n gefn i chi
 
 
 ;Firefox Features
-Firefox Features
+Nodweddion Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Croeso i Firefox
 
 
 ;Firefox Help
-Firefox Help
+Cymorth Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
-
+Gwaith celf Firefox for Android
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Cyflym. Clyfar. Diogel.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Estyn y porwr symudol sy'n gefn i chi.
 
 
