--- a/it/main.lang
+++ b/it/main.lang
@@ -413,6 +413,6 @@ Novità
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacy {ok}
 
 
