Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107519 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/whatsnew.lang
+++ b/hu/whatsnew.lang
@@ -2,7 +2,7 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hurrá! A legújabb Firefox böngészőt használja.
+Hurrá! A legújabb Firefoxot használja.
 
 
 ;Your Firefox is out of date.
@@ -22,7 +22,7 @@ Biztonsági okokból, javasoljuk a <a href="{url}">legfrissebb verzió letölté
 
 
 ;Get to your next task<br/>faster than ever
-Kezdjen neki a következő feladatának<br/>gyorsabban, mint valaha
+Kezdjen neki a következő feladatnak<br/>gyorsabban, mint valaha
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
@@ -54,7 +54,7 @@ Tartsuk működésben
 
 
 ;Join Mozilla
-Csatlakozzon a Mozillához
+Csatlakozzon
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
