Bug 773701 – [ja] translate strings for Whatsnew page for Firefox 14
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107522 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ja/main.lang
+++ b/ja/main.lang
@@ -95,11 +95,11 @@ All rights reserved.
 
 
 ;Legal Notices
-Legal Notices
+法的通知
 
 
 ;Privacy Policy
-Privacy Policy
+プライバシーポリシー
 
 
 ;Visit Mozilla.com
@@ -115,7 +115,7 @@ Download Firefox - Free
 
 
 ;Release Notes
-Release Notes
+リリースノート
 
 
 ;Other Systems and Languages
@@ -339,7 +339,7 @@ View Full Site
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Android 版 Firefox をダウンロード
 
 
 ;Download for <span>Android</span>
@@ -347,7 +347,7 @@ Download for <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Google Play ストアで無料公開中
 
 
 ;Desktop
@@ -403,16 +403,16 @@ Update now
 
 
 ;Supported Devices
-Supported devices
+対応機種
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+リリースノート
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+プライバシー
 
 
