--- a/ja/whatsnew.lang
+++ b/ja/whatsnew.lang
@@ -2,23 +2,23 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+お使いの Firefox は最新版へ更新されました。
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+お使いの Firefox は古いバージョンです。
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+セキュリティ上の理由から、<a href="{url}">最新版へ更新</a> されることをお勧めします。
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+お使いの Firefox は不明なバージョンです。
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+セキュリティ上の理由から、<a href="{url}">最新版をダウンロード</a> されることをお勧めします。
 
 
 ;Get to your next task<br/>faster than ever
@@ -58,42 +58,42 @@ Join Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android ロボットは Google によって作成、<a href="%s">共有</a> されている作品から再現したもので、<a href="%s">Creative Commons 3.0 Attribution License</a> に記載されている条件に従って使用しています。
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+高速・スマート・安心。新しい <a href="%s">Android 版 Firefox</a> でモバイルブラウジングを快適に。
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+生まれ変わった<br>Android 版 Firefox
 
 
 ;Firefox Features
-Firefox Features
+Firefox の機能
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Firefox へようこそ
 
 
 ;Firefox Help
-Firefox Help
+Firefox ヘルプ
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Android 版 Firefox アートワーク
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+高速。スマート。安心。
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+生まれ変わった Android 版 Firefox
 
 
