Bug 773701 – [ja] translate strings for Whatsnew page for Firefox 14
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107524 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ja/mobile.lang
+++ b/ja/mobile.lang
@@ -131,6 +131,6 @@ See all our channels for mobile »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Google Play ストアで無料公開中
 
 
