l10n: sync es-* locales with es-ES
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107526 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-CL/download.lang
+++ b/es-CL/download.lang
@@ -35,6 +35,6 @@ Bienvenido al único navegador <em>que pone tus intereses en primer lugar.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Navegador Mozilla Firefox
 
 
