--- a/es-CL/main.lang
+++ b/es-CL/main.lang
@@ -355,11 +355,11 @@ Escritorio
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Beta para dispositivos móviles
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefox para dispositivos móviles
 
 
 ;Email
@@ -375,7 +375,7 @@ Super velocidad
 
 
 ;Stunning graphics
-Stunning graphics
+Gráficos sorprendentes
 
 
 ;The latest technologies
@@ -383,15 +383,15 @@ Las últimas tecnologías
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+Estás usando una versión antigua de Firefox. ¡Actualiza para mantener tu seguridad! <br/> <a href="%s">Descarga la actualización gratuita</a> en menos de un minuto para obtener las últimas características, la máxima velocidad y la mejor seguridad.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+¡Necesitas actualizar! Mantén tu seguridad dedicando menos de un minuto. <br/> Comienza a usar tu nuevo Firefox y obtendrás la mejor navegación y personalización de la Web. <br/>   ¡Es rápido y gratuito!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+Estás usando una versión antigua de Firefox. ¡Obtén <a href="%s">tu actualización</a> para mantenerte seguro! <br/> Experimenta las últimas características, mejoras de seguridad y el Firefox más rápido. Descarga la actualización gratuita en menos de un minuto.
 
 
 ;Upgrade now
@@ -408,11 +408,11 @@ Dispositivos soportados
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Qué hay de nuevo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacidad
 
 
