--- a/es-MX/main.lang
+++ b/es-MX/main.lang
@@ -403,16 +403,16 @@ Actualiza ahora
 
 
 ;Supported Devices
-Dispositivos soportados
+Dispositivos compatibles
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Qué hay de nuevo
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacidad
 
 
