--- a/es-MX/newsletter.lang
+++ b/es-MX/newsletter.lang
@@ -6,7 +6,7 @@ Obtener noticias mensuales
 
 
 ;Your Email Address
-Tu correo electrónico
+Tu dirección de correo
 
 
 ;Text
@@ -30,15 +30,15 @@ Por favor, lee la política de privacidad de Mozilla y acepta marcando la casill
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-Estoy de acuerdo con la <a href="%s">política de privacidad</a>
+Acepto la <a href="%s">política de privacidad</a>
 
 
 ;Sign me up!
-¡Suscríbeme!
+¡Suscribirme!
 
 
 ;We will only send you Mozilla-related information.
-Sólo te enviaremos información relacionada con Mozilla.
+Solo te enviaremos información relacionada con Mozilla.
 
 
 ;Thanks for Subscribing!
@@ -46,15 +46,15 @@ Sólo te enviaremos información relacionada con Mozilla.
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Queremos empezar a compartir trucos y consejos para sacar el máximo partido a Firefox, así como noticias interesantes sobre Mozilla y cómo estamos trabajando para crear una web mejor.
+Estamos deseando comenzar a compartir contigo trucos y consejos sobre cómo sacar el máximo partido de Firefox, las noticias más increíbles sobre Mozilla y todo el trabajo que hacemos para crear una web mejor.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Suscríbete para recibir actualizaciones mensuales y estar al día de las novedades de Firefox, incluyendo los últimos trucos y consejos para sacar el máximo partido a tu navegador. ¡Es la forma perfecta de que sigamos en contacto contigo!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Acabamos de enviarte un correo electrónico con el mensaje de confirmación. Haz clic en el enlace de confirmación para validar tu suscripción a la lista de correos.
+Te enviamos un mensaje de confirmación por correo. Haz clic en el enlace de confirmación para validar tu suscripción a esta lista de correo.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -74,19 +74,19 @@ Formato
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-¿Quieres recibir la info más relevante? Cuéntanos un poco más de ti. Y ya que estás aquí, suscríbete a otras noticias de Mozilla.
+¿Deseas recibir la info más relevante? Cuéntanos un poco más de ti. Y ya que estás, suscríbete a otras noticias de Mozilla.
 
 
 ;Firefox & You
-Firefox & tú
+Firefox y Tú
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Otros boletines de Mozilla:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Recibe los últimos trucos y consejos sobre cómo sacar el máximo partido a tu navegador favorito.
 
 
 ;Firefox Mobile
@@ -94,43 +94,43 @@ Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Conoce los nuevos complementos y características más populares en Firefox para dispositivos móviles.
 
 
 ;Beta News
-Beta News
+Noticias Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lee todo acerca de las últimas características en Firefox para escritorio y dispositivos móviles antes de que se publique la versión final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+¡Seamos amigos!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox está también en tus redes sociales favoritas. Conecta con nosotros y únete a la conversación.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Administrar tus <span>suscripciones a los boletines</span>
 
 
 ;Subscribe
-Subscribe
+Suscribirme
 
 
 ;Unsubscribe
-Unsubscribe
+Cancelar suscripción
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marca aquí si deseas darte de baja de todos los correos de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Darme de baja de todos los correos de Mozilla
 
 
 ;Save Preferences
@@ -138,35 +138,35 @@ Guardar preferencias
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Gracias por actualizar tus preferencias de correo.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Has cancelado tu suscripción.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Lamentamos que te vayas. ¿Te importaría contarnos por qué te marchas?
 
 
 ;You send too many emails.
-You send too many emails.
+Recibo demasiados correos.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+El contenido no me parecía relevante.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+El diseño del correo no facilitaba la lectura.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+No me di de alta en esta suscripción.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Prefiero seguir en contacto con Mozilla en Facebook y Twitter.
 
 
 ;Submit
@@ -174,22 +174,22 @@ Enviar
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Gracias por contarnos por qué te vas.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Boletines de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+¡Gracias! Por favor, revisa tu buzón de correo para confirmar tu suscripción.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Recibirás un correo de mozilla@e.mozilla.org para confirmar tu suscripción. Si no lo ves, verifica tu filtro de spam. Debes confirmar tu suscripción para recibir nuestro boletín.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Por favor, añade nuestra dirección de envío mozilla@e.mozilla.org a tu libreta de direcciones para asegurarte de que siempre lleguemos a tu buzón.
 
 
