--- a/es-MX/whatsnew.lang
+++ b/es-MX/whatsnew.lang
@@ -62,38 +62,38 @@ Android Robot es una reproducción de la obra creada y <a href="%s">compartida p
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Obtén Firefox para Android</a> y todo el poder de la Web en tus manos. ¡Es rápido, inteligente y seguro!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Obtén ahora el navegador móvil que te protege
 
 
 ;Firefox Features
-Firefox Features
+Características de Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Bienvenido a Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ayuda de Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Material gráfico de Firefox para Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rápido. Inteligente. Seguro.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Obtén el navegador móvil que te protege.
 
 
