l10n: fa, revert a string that breaks python
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107553 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fa/whatsnew.lang
+++ b/fa/whatsnew.lang
@@ -58,7 +58,7 @@
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-روبات اندروید بر اساس کارهایی که گوگل انجام داده و به اشتراک‌گذاشته است بازسازی شده و بر اساس شرایطی که در گواهینامه <a href="%s">Creative Commons 3.0 Attribution</a> ذکر شده مورد استفاده قرار گرفته‌است.
+;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
