--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -66,7 +66,7 @@ Das Android-Maskottchen wurde aus einem Werk abgeleitet, das <a href="%s">von Go
 
 
 ;Now get the mobile browser that’s got your back
-Holen Sie sich jetzt den Browser, der Sie beschützt
+Holen Sie sich jetzt den Browser für Mobilgeräte, der Sie beschützt
 
 
 ;Firefox Features
