l10n: fr, reword a sentence in whatsnew
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107587 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/whatsnew.lang
+++ b/fr/whatsnew.lang
@@ -58,7 +58,7 @@ Aidez Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Le robot Android est inspiré d'une œuvre créée et <a href="%s">partagée par Google</a> et est utilisé selon les conditions décrites par sa licence <a href="%s">Creative Commons 3.0</a>.
+Le robot Android est inspiré d'une œuvre créée et <a href="%s">partagée par Google</a>, il est utilisé selon les conditions décrites par sa licence <a href="%s">Creative Commons 3.0</a>.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
