--- a/fa/whatsnew.lang
+++ b/fa/whatsnew.lang
@@ -58,42 +58,42 @@
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+;ربات اندروید توسط کاری که <a href="%s">گوگل به اشتراک‌گذاشته</a> است بازسازی شده و براساس مقررات مشروح در گواهینامهٔ <a href="%s">Creative Commons 3.0 Attribution</a> مورد استفاده قرار گرفته است.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">فایرفاکس را برای اندروید بگیرید</a> و قدرت وب را در دستانتان داشته باشید. فایرفاکس، سریع، هوشمند و ایمن است!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+حالا مرورگر وب تلفن همراهی را بگیرید که هوای شما را دارد.
 
 
 ;Firefox Features
-Firefox Features
+امکانات فایرفاکس
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+به فایرفاکس خوش‌آمدید
 
 
 ;Firefox Help
-Firefox Help
+راهنمای فایرفاکس
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+کارهای هنری فایرفاکس برای اندروید
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+سریع. هوشمند. ایمن.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+مرورگر وب تلفن همراهی را بگیرید که هوای شما را دارد.
 
 
