--- a/sq/main.lang
+++ b/sq/main.lang
@@ -408,11 +408,11 @@ Pajisje të mbuluara
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Ç'ka të Re
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privatësi
 
 
