--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -130,19 +130,19 @@ Firefox-i ka veçori të reja për ta bërë kalimin tuaj në hapin pasues edhe 
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+E doni Firefox Beta-n? <a href="%s">Ftojini miqtë tuaj</a> që të hedhin edhe ata një vështrim të shpejtë mbi çka vjen së shpejti te Firefox-i.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+E përdor Firefox Beta-n që të hedh një sy mbi veçoritë më të reja dhe risitë e ardhshme të Firefox-it. <a href="%s">Shiheni dhe ju</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Faleminderit që po përdorni Firefox Beta-n për të na ndihmuar ta bëjmë Firefox-in më të mahnitshëm. Tani <a href="%s">ftojini edhe miqtë tuaj</a> për një provë me të.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+E përdor Firefox Beta-n që të ndihmoj të vihen në provë veçoritë më të reja dhe për ta bërë Firefox-n më të mahnitshëm. <a href="%s">Shiheni dhe ju</a>.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
