--- a/sq/mobile.lang
+++ b/sq/mobile.lang
@@ -131,6 +131,6 @@ Shihni krejt kanalet tanë për celularë »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Falas te Shitorja Google Play
 
 
