--- a/sq/whatsnew.lang
+++ b/sq/whatsnew.lang
@@ -62,38 +62,38 @@ Roboti Android është riprodhuar sipas një punimi të krijuar dhe <a href="%s"
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Merrni Firefox-in për Android</a> dhe merreni fuqinë e Web-it në duart tuaja. Është i shpejtë, i mençur dhe i sigurt!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Tani merrni shfletuesin për celular që ju bëri t'i ktheheni Internetit
 
 
 ;Firefox Features
-Firefox Features
+Veçori Firefox-i
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Mirë se vini te Firefox-i
 
 
 ;Firefox Help
-Firefox Help
+Ndihmë për Firefox-in
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Grafikë Firefox-i për Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+I shpejtë. I mençur. I sigurt.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Merrni shfletuesin për celular që ju bëri t'i ktheheni Internetit.
 
 
