--- a/ca/main.lang
+++ b/ca/main.lang
@@ -408,11 +408,11 @@ Dispositius compatibles
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Novetats
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privadesa
 
 
