--- a/ca/mobile.lang
+++ b/ca/mobile.lang
@@ -131,6 +131,6 @@ Vegeu tots els nostres canals pel mòbil »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Gratuït al Google Play Store
 
 
