--- a/ca/whatsnew.lang
+++ b/ca/whatsnew.lang
@@ -62,38 +62,38 @@ El Robot d'Android ha estat reproduït a partir del treball creat i <a href="%s"
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Baixeu-vos el Firefox per a l'Android</a> i poseu el poder del web a les vostres mans. És ràpid, intel·ligent i segur!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Obteniu el navegador mòbil que us protegeix
 
 
 ;Firefox Features
-Firefox Features
+Característiques del Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Us donem la benvinguda al Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ajuda del Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Material gràfic del Firefox per a l'Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Ràpid. Intel·ligent. Segur.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Baixeu-vos el navegador mòbil que us protegeix.
 
 
