--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -90,7 +90,7 @@ Prêuva, rifìniscile e polìscile e agiùttine a fâ a mêgio versción de sén
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Ti veu bén a Firefox? Ti ne veu agiutâ a realizâ a pròscima versción ancón ciù bèlla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
+Ti veu bén a Firefox? Ti ne veu agiutâ a fâ a pròscima versción ancón ciù bèlla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
