[es] marketplace website l10n updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107650 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/marketplace/marketplace.lang
+++ b/es-ES/marketplace/marketplace.lang
@@ -1,16 +1,16 @@
 
 
 ;Sign up for more news about the Mozilla Marketplace.
-Sign up for more news about the Mozilla Marketplace.
+Suscríbete para recibir más información sobre el Marketplace de Mozilla.
 
 
 ;Thank you for signing up!
-Thank you for signing up!
+¡Gracias por suscribirte!
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+TU CORREO EN ESTE ESPACIO
 
 
 ;Sign up&nbsp;»
-Sign up&nbsp;»
+Suscribirme&nbsp;»
