--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -1,64 +1,64 @@
 
 
 ;Build an early fan base and gain popularity.
-Build an early fan base and gain popularity.
+Crea una base de pioneros tecnológicos y gana popularidad.
 
 
 ;Opening Soon
-Opening Soon
+Próximamente
 
 
 ;Mozilla Marketplace Partners
-Mozilla Marketplace Partners
+Socios del Marketplace de Mozilla
 
 
 ;Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps.
-Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps.
+Mozilla aporta sus valores fundamentales al mundo de las aplicaciones: apertura, libertad, elección para los usuarios.
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Este video requiere un navegador compatible con un video abierto o <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
 
 
 ;Learn all about creating HTML5 apps at the Mozilla Developer Network »
-Learn all about creating HTML5 apps at the Mozilla Developer Network »
+Descubre todo lo que hay que saber para crear aplicaciones HTML5 en Mozilla Developer Network »
 
 
 ;The Mozilla apps platform
-The Mozilla apps platform
+La plataforma de aplicaciones de Mozilla
 
 
 ;Mozilla Marketplace
-Mozilla Marketplace
+Marketplace de Mozilla
 
 
 ;Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
-Building apps for the Web provides developers with full control over content, functionality and how apps are distributed, including access to hundreds of millions of Firefox users through the Mozilla Marketplace.
+La creación de aplicaciones para la Web ofrece a los desarrolladores un control total sobre su contenido, sus funcionalidades y su distribución, además de la posibilidad de tener acceso a cientos de millones de usuarios de Firefox a través del Marketplace de Mozilla.
 
 
 ;Submit your app »
-Submit your app »
+Enviar tu aplicación »
 
 
 ;Launch your app on the Web
-Launch your app on the Web
+Lanza tu aplicación en la Web
 
 
 ;Target tech savvy consumers with your app.
-Target tech savvy consumers with your app.
+Muestra tu aplicación para atraer a los consumidores expertos en tecnología.
 
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
+Antes de que el lanzamiento se haga público este año, Mozilla abrirá el Marketplace para que los usuarios lo prueben. Aprovéchate y sé uno de los primeros desarrolladores de aplicaciones en crear una base de usuarios. Envía tu aplicación a:
 
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
-Mozilla Marketplace — <em>Opening Soon</em>
+Marketplace de Mozilla. <em>Próximamente</em>
 
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
+El uso de estándares de la Web abierta y API diseñadas por Mozilla nos permite ofrecer grandes experiencias con aplicaciones en multitud de plataformas, dispositivos y sistemas operativos. Por primera vez se reduce la brecha entre aplicaciones web y aplicaciones nativas.
 
 
 ;Test your app with a committed group of early adopters.
-Test your app with a committed group of early adopters.
+Prueba tu aplicación con un grupo comprometido de pioneros tecnológicos.
